--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+    font-family: "Noto Sans KR";
+    src: url("/fonts/NotoSansKR-Regular.ttf") format("truetype");
+    font-weight: normal;
+}
+@font-face {
+    font-family: "Noto Sans KR";
+    src: url("/fonts/NotoSansKR-Bold.ttf") format("truetype");
+    font-weight: 700;
+}
+@font-face {
+    font-family: "Noto Sans KR";
+    src: url("/fonts/NotoSansKR-SemiBold.ttf") format("truetype");
+    font-weight: 600;
+}
 
+@font-face {
+    font-family: "NanumGothic";
+    src: url("/fonts/NanumGothic.ttf") format("truetype");
+    font-weight: normal;
+}
+@font-face {
+    font-family: "NanumGothic";
+    src: url("/fonts/NanumGothicLight.ttf") format("truetype");
+    font-weight: 200;
+}
+@font-face {
+    font-family: "NanumGothic";
+    src: url("/fonts/NanumGothicBold.ttf") format("truetype");
+    font-weight: 600;
+}
+@font-face {
+    font-family: "NanumGothic";
+    src: url("/fonts/NanumGothicExtraBold.ttf") format("truetype");
+    font-weight: 800;
+}
+body {
+    font-family: "Noto Sans KR", sans-serif;
+}
 :root {
     --foreground-rgb: 0, 0, 0;
     --background-start-rgb: 214, 219, 220;
@@ -9,8 +47,7 @@
 }
 @layer base {
     html {
-        @apply text-[#FEFEFE] bg-[#8AAAE5]  overflow-hidden;
-    
+        @apply text-[#FEFEFE] bg-[#8AAAE5];
     }
 }
 @media (prefers-color-scheme: dark) {
@@ -20,4 +57,3 @@
         --background-end-rgb: 0, 0, 0;
     }
 }
-
